# hf-dataset

./: .gitignore  CHANGELOG.md  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
data/: raw.dvc
data/manifests/: .gitignore
docs/: FILELIST.md  SONGS.md
reports/: validate.json
scripts/: build_manifest.py  build_song_list.py  check_audio_health.py  check_midi_health.py  csv_to_midi.py  publish_to_huggingface.py  validate_dataset.py
tests/: __init__.py  conftest.py  test_build_manifest.py  test_csv_to_midi.py  test_integration.py  test_validate_dataset.py
